k8s/frontend/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend
  namespace: jerney

spec:
  selector:
    app: frontend

  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

  type: ClusterIP
